Bug 1541644 - Add some more logging statements. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D26924

--HG--
extra : moz-landing-system : lando