gfx/layers/apz/src/GenericFlingAnimation.h
@@ -12,6 +12,7 @@
 #include "AsyncPanZoomController.h"
 #include "FrameMetrics.h"
 #include "Layers.h"
+#include "LayersLogging.h"
 #include "Units.h"
 #include "OverscrollHandoffState.h"
 #include "gfxPrefs.h"
